@@ -13,6 +13,7 @@ Changes in progress
 - bp-like: Fixed removal of activity when you like and then unlike your own activity post
 - xtec-booking: Increased maximum number of events displayed in calendar view (Trello #1583)
 - table-of-contents-plus: Added plugin (Trello #1370)
+- agora-functions: Added feature to replace bp-moderation (Trello #1580)
 
 
 Changes 17.04.24
